apps/posts-db/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: posts-db
  namespace: zt-posts-db
  labels:
    app: posts-db
spec:
  serviceName: posts-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: posts-db
  template:
    metadata:
      labels:
        app: posts-db
    spec:
      serviceAccountName: posts-db
      containers:
        - name: posts-db
          image: devesh11411/blog-content-db:v1.0.0
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand('ping')
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand('ping')
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 2Gi
