apps/posts-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-db
  namespace: zt-posts-db
  labels:
    app: posts-db
spec:
  selector:
    app: posts-db
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: posts-db-headless
  namespace: zt-posts-db
  labels:
    app: posts-db
spec:
  clusterIP: None
  selector:
    app: posts-db
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
