apps/posts-db/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-posts-db
  namespace: zt-posts-db
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - zt-posts
